fix(styleForm): Modif z-index dialogues génériques + de dessin

--- a/src/packages/CSS/Controls/StyleDialog/GPFflatStyleForm.scss
+++ b/src/packages/CSS/Controls/StyleDialog/GPFflatStyleForm.scss
@@ -1,4 +1,5 @@
 .style-form {
+  z-index: 2;
   display: flex;
   flex-direction: row;
   gap: 0.5rem 1rem;
